# TonieDex

./: .gitignore  README.md
backend/: main.py  makefile  pyproject.toml
backend/crawler/: tonie_crawler.py
backend/model/: tonie.py
backend/service/: tonie_service.py
backend/utils/: logger_setup.py
