[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Schero1994 <schaeran1994@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.29.0"
black = "^23.3.0"
sqlalchemy = "^2.0.11"
pytest = "^7.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
